testdata/fixtures/review/positive/todo_fixme_ts.ts
export function parse(s: string): string {
  // FIXME: handle empty strings
  return s.trim();
}
