testdata/fixtures/review/negative/debug_logger_ts.ts
import { logger } from "./log";
export function run(): void {
  logger.info("started");
}
